<resources>
    <string name="app_name">CCTV PLBN</string>
    <string name="icon_camera">icon camera</string>
    <string name="welcome">Welcome</string>
    <string name="sign_in_to_access_your_cctv_cameras">Sign in to access your CCTV cameras</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_userid">Enter your userID</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="admin">Admin</string>
    <string name="john_doe">John Doe</string>
    <string name="logout">Logout</string>
    <string name="loading_default">Loading...</string>
</resources>
