<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0B0D12">

    <!-- Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="#0B0D12"
        app:title="Settings"
        app:titleTextColor="@android:color/white"
        app:navigationIcon="@drawable/ic_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toTopOf="@+id/btnLogout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Profile Card -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_profile_card"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/imgAvatar"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:src="@drawable/ic_user"
                    android:padding="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtName"
                    android:text="@string/john_doe"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@id/imgAvatar"
                    app:layout_constraintTop_toTopOf="@id/imgAvatar"
                    android:layout_marginStart="12dp"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/admin"
                    android:textColor="#AAAAAA"
                    android:textSize="13sp"
                    app:layout_constraintStart_toStartOf="@id/txtName"
                    app:layout_constraintTop_toBottomOf="@id/txtName"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- SECTION -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="GENERAL"
                android:textColor="#666666"
                android:textSize="12sp"
                android:layout_marginTop="24dp"/>

            <include layout="@layout/item_setting"
                android:id="@+id/editUser"
                app:icon="@android:drawable/ic_menu_edit"
                app:title="Edit User"
                app:subtitle="Add, delete, user"/>

            <include layout="@layout/item_setting"
                android:id="@+id/cameraSetting"
                app:icon="@drawable/ic_camera"
                app:title="Camera Settings"
                app:subtitle="Quality and recording"/>

            <include layout="@layout/item_setting"
                android:id="@+id/tnc"
                app:icon="@drawable/ic_camera"
                app:title="Security and Privacy"
                app:subtitle="Password and access"/>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogout"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_margin="24dp"
        android:text="@string/logout"
        android:textAllCaps="false"
        android:textColor="#FF5A5A"
        android:background="@drawable/bg_logout_button"
        android:textSize="15sp"
        android:textStyle="bold"
        app:icon="@drawable/ic_logout"
        app:iconTint="#FF5A5A"
        android:gravity="center"
        app:rippleColor="#33FF5A5A"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
